--- a/main.html
+++ b/main.html
@@ -4,7 +4,15 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
     <script src="./js/synth.js" type="text/javascript"></script>
+    <script>
+        $( document ).ready(function() {
+            // https://stackoverflow.com/questions/879152/how-do-i-make-javascript-beep
+            audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+            show();
+        });
+    </script>
 </head>
 <body>
     <!-- https://stackoverflow.com/questions/879152/how-do-i-make-javascript-beep -->
