--- a/main.html
+++ b/main.html
@@ -15,20 +15,6 @@
     </script>
 </head>
 <body>
-    <!-- https://stackoverflow.com/questions/879152/how-do-i-make-javascript-beep -->
-    frequency
-    <input type="range" id="fIn" min="40" max="6000" oninput="show()" />
-    <span id="fOut"></span><br>
-    type
-    <input type="range" id="tIn" min="0" max="3" oninput="show()" />
-    <span id="tOut"></span><br>
-    volume
-    <input type="range" id="vIn" min="0" max="100" oninput="show()" />
-    <span id="vOut"></span><br>
-    duration
-    <input type="range" id="dIn" min="1" max="5000" oninput="show()" />
-    <span id="dOut"></span>
-    <br>
-    <button onclick='beep();'>Play</button>
+    <button onclick='start();'>Drop some "Bombs"</button>
 </body>
 </html>
