Got a single bomb dropping sound but have to hit refresh after each dropping.

--- a/main.html
+++ b/main.html
@@ -14,6 +14,11 @@
     </script>
 </head>
 <body>
+    <p>
+    Make sure you turn your volume down before you click
+    "Drop some 'Bombs'" you may find the generated tones
+    "annoying"...
+    </p>
     <button onclick='start();'>Drop some "Bombs"</button>
 </body>
 </html>
