--- a/main.html
+++ b/main.html
@@ -72,6 +72,6 @@ THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     https://developer.mozilla.org/en-US/docs/Web/API/OscillatorNode
     </a>
     </p>
-    <button onclick='dropBombs();'>Drop some "Bombs"</button>
+    <button onclick='begin();'>Start this Goofy "Program"</button>
 </body>
 </html>
