--- a/main.html
+++ b/main.html
@@ -30,7 +30,8 @@ THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js"></script>
+    <script src="./js/third-party/svg.min.js" type="text/javascript"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js" type="text/javascript"></script>
     <script src="./js/synth.js" type="text/javascript"></script>
     <script>
         $( document ).ready(function() {
