Improvements to viewing areas and added elevation text to give users feedback when there is nothing on the screen.

--- a/main.html
+++ b/main.html
@@ -41,6 +41,7 @@ THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     </script>
 </head>
 <body>
+    <div id="thisShouldReallyBeSomePopup">
     <p>
     Make sure you turn your volume down before you click
     "Drop some 'Bombs'".  You may find the generated tones
@@ -73,5 +74,8 @@ THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     </a>
     </p>
     <button onclick='begin();'>Start this Goofy "Program"</button>
+    </div>
+    <p>Click Refresh, Press F5 or close your browser
+    window to stop the program</p>
 </body>
 </html>
