Added Text to Bombs.

--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 MIT LICENSE
 https://mit-license.org/
 
-Copyright © 2020 Shawn Eary
+Copyright © 2021, 2020 Shawn Eary
 
 Permission is hereby granted, free of charge, to any person obtaining a
 copy of this software and associated documentation
@@ -64,10 +64,14 @@ THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     personal website some day.
     </p>
     <p>
-    You don't need Visual Studio to make this work.  Just
-    Notepad and a decent internet browser like Chrome, FireFox
-    or Microsoft's Chromium based Edge.  I don't know if this works
-    on old school Edge or not.  Forget traying Internet Explorer.
+    Visual Studio is no longer supported as an IDE.  It should work,
+    but you will have to create your own solution file.  For something
+    this simple, you are better off using Visual Studio Code and modern
+    internet browser like FireFox, Chromium Edge or Google Chrome.
+    </p>
+    <p>
+    I don't know if this works
+    on old school Edge or not.  Forget trying Internet Explorer.
     Internet Explorer does not support the Web Audio API<br />
     <a href="https://developer.mozilla.org/en-US/docs/Web/API/OscillatorNode" target="_blank">
     https://developer.mozilla.org/en-US/docs/Web/API/OscillatorNode
@@ -75,7 +79,10 @@ THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     </p>
     <button onclick='begin();'>Start this Goofy "Program"</button>
     </div>
-    <p>Click Refresh, Press F5 or close your browser
-    window to stop the program</p>
+    <p>Click Refresh; press F5; or, close your browser
+    window to stop the "program"</p>
+    <p>This program has issues. I have other hobbies that I spend
+    too much time on thereby neglecting this.
+    </p>
 </body>
 </html>
