--- a/main.html
+++ b/main.html
@@ -32,6 +32,7 @@ THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     <title></title>
     <script src="./js/third-party/svg.min.js" type="text/javascript"></script>
     <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-1.9.0.js" type="text/javascript"></script>
+    <script src="./js/anim.js" type="text/javascript"></script>
     <script src="./js/synth.js" type="text/javascript"></script>
     <script>
         $( document ).ready(function() {
