--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@ THE USE OR OTHER DEALINGS IN THE SOFTWARE.
     <script>
         $( document ).ready(function() {
             // https://stackoverflow.com/questions/879152/how-do-i-make-javascript-beep
-            audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+            // audioCtx = new (window.AudioContext || window.webkitAudioContext)();
         });
     </script>
 </head>
